...

        <Button
          icon={<Icon color={semanticColors.brandOn} name="arrowRight" size={18} />}
          onPress={() => router.push(STEPS_ROUTE)}
          size="lg"
          style={styles.startButton}
          testID="onboarding-welcome-start-button">
          Começar
        </Button>
      </View>
    </SafeAreaView>
  );
}
...
